Converted Base64 Encode/Decode from Sun to OpenJDK