@@ -1,7 +1,6 @@
 package com.groupon.seleniumgridextras.utilities;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
@@ -23,8 +22,8 @@ public class ImageUtils {
     BufferedImage image = null;
     byte[] imageByte;
     try {
-      BASE64Decoder decoder = new BASE64Decoder();
-      imageByte = decoder.decodeBuffer(imageString);
+      Base64.Decoder decoder = java.util.Base64.getDecoder();
+      imageByte = decoder.decode(imageString);
       ByteArrayInputStream bis = new ByteArrayInputStream(imageByte);
 
       image = ImageIO.read(bis);
@@ -50,8 +49,8 @@ public class ImageUtils {
       ImageIO.write(image, type, bos);
       byte[] imageBytes = bos.toByteArray();
 
-      BASE64Encoder encoder = new BASE64Encoder();
-      imageString = encoder.encode(imageBytes);
+      Base64.Encoder encoder = java.util.Base64.getEncoder();
+      imageString = encoder.encodeToString(imageBytes);
 
       bos.close();
     } catch (IOException e) {
